--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "react:dev": "webpack -d --watch",
+    "start:dev": "nodemon server/index.js"
   },
   "repository": {
     "type": "git",
@@ -17,9 +19,22 @@
   },
   "homepage": "https://github.com/HBMattoon/lold3#readme",
   "dependencies": {
+    "@babel/core": "^7.7.5",
+    "@babel/preset-env": "^7.7.6",
+    "@babel/preset-react": "^7.7.4",
+    "babel-loader": "^8.0.6",
+    "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
+    "d3": "^5.14.2",
     "express": "^4.17.1",
     "node-fetch": "^2.6.0",
-    "node-gzip": "^1.1.2"
+    "node-gzip": "^1.1.2",
+    "react": "^16.12.0",
+    "react-d3-library": "^1.1.8",
+    "react-dom": "^16.12.0",
+    "webpack": "^4.41.2"
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.3.10"
   }
 }
